--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>William S. Projects Site</title>
+		<title>William S. Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Statistics and<br />
 						Machine Learning</h1>
-						<p> A place where I show my Statistics and Machine Learning projects. <br />
+						<p> A place where I show my projects. <br />
 					<!--	<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul> -->
@@ -52,7 +52,7 @@
 								<header class="major">
 									<!--<span class="date">April 25, 2017</span> -->
 									<h2><a href="#">My name is <br /> William Suzuki</a></h2>
-									<p> R-Python | Spatial Statistics and Financial Econometrics | <br /> 
+									<p> R-Python | Spatial Statistics | Financial Econometrics | <br /> 
 									| Machine Learning | Economic Development 
 									| Ms in Economics USP </p>
 									
@@ -104,17 +104,16 @@
 					<footer id="footer">
 						
 						<section class="split contact">
-						<!--	<section class="alt">
+							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p> São Paulo, BR</p>
 							</section> 
-							<section>
+						<!--	<section>
 								<h3>Phone</h3>
 								<p><a href="#">+55 11 99713-7309</a></p>
 							</section> -->
 							<section>
-								<h3>Email</h3>
+								<h3>Contact</h3>
 								<p><a href="#">william.suzuki@usp.br</a></p>
 							</section>
 						</section>
