include icon, box quotes, opening phrase

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>William S. Projects</title>
+		<title>   William Suzuki | Data Science</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" type="image/png" href="images/rocket.png" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -21,7 +22,7 @@
 					<div id="intro">
 						<h1>Statistics and<br />
 						Machine Learning</h1>
-						<p> A place where I show my projects. <br />
+						<p> A place to explore Data.  <br />
 					<!--	<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul> -->
@@ -102,8 +103,12 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						
 						<section class="split contact">
+							<section>
+								"All models are wrong, but some are useful" <br/>
+								- George Box
+							</section>
+
 							<section class="alt">
 								<h3>Address</h3>
 								<p> São Paulo, BR</p>
@@ -121,8 +126,10 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul> <!-- <li>&copy; Untitled</li> --> <li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<!-- <ul> <li>&copy; Icon made by Freepik from www.flaticon.com</li> <br/>-->
+						<ul> <li>&copy; Icon made by Freepik from www.flaticon.com</li>  <li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
+
 
 			</div>
 
