--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Statistics and<br />
-						Machine Learning</h1>
-						<p> A place to explore Data.  <br />
+						<h1>My name is <br />
+						William Suzuki</h1>
+						<p> R-Python | Spatial Statistics | Financial Econometrics | Bayesian Inference |<br /> 
+									| Machine Learning | Economic Development 
+									| Ms in Economics USP 
 					<!--	<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul> -->
@@ -49,15 +51,13 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
+						<!--	<article class="post featured">
 								<header class="major">
-									<!--<span class="date">April 25, 2017</span> -->
-									<h2><a href="#">My name is <br /> William Suzuki</a></h2>
-									<p> R-Python | Spatial Statistics | Financial Econometrics | <br /> 
-									| Machine Learning | Economic Development 
-									| Ms in Economics USP </p>
+									<span class="date">April 25, 2017</span> 
+									<h3><a href="#"></a></h3>
+									<p> </p>
 									
-							</article>
+							</article> -->
 
 						<!-- Posts -->
 							<section class="posts">
