--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Home</a></li>
+							<li class="active"><a href="index.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/william-suzuki-8b3b56164/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
