--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 										<h2><a href="#">Primis eget<br />
 										imperdiet lorem</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/city_night.jpg" alt="" /></a>
+									<a href="luminosity_markdown.html" class="image fit"><img src="images/city_night.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 
 								</article>
