--- a/index.html
+++ b/index.html
@@ -80,11 +80,15 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="luminosity_markdown.html">Night Time Luminosity <br/> for cities in Brazil
+										</a></h2>
 									</header>
 									<a href="luminosity_markdown.html" class="image fit"><img src="images/city_night.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>
+										The objective of this work is to build GIFs showing night time luminosity change in some large cities of Brazil. Have a look at the maps inside. 
+
+
+									</p>
 
 								</article>
 								<article>
