--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul> -->
 					</div>
-<!--reference: https://www.youtube.com/watch?v=u-RLu_8kwA0  -->
 
 				<!-- Header 
 					<header id="header">
@@ -93,6 +92,29 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="report_SPSAS.pdf">SPSAS learning from<br />
+																		Data Report</a></h2>
+									</header>
+									<a href="report_SPSAS.pdf" class="image fit"><img src="images/conference.jpg" alt="" /></a>
+									<p> São Paulo School of Advanced Sciences hosted the <i> SPSAS Learning from Data </i> on August 2019. This is my report on the presentations. Some of the presenters are Abu-Mostafa, Ulisses Neto, Ling Liu, and Željko Ivezić.</p>
+
+								</article>
+
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">Primis eget<br />
+										imperdiet lorem</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/industry.jpg" alt="" /></a>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+
+								</article>
+
+
+								</article>
+								<article>
+									<header>
 										<h2><a href="#">Primis eget<br />
 										imperdiet lorem</a></h2>
 									</header>
@@ -130,8 +152,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<!-- <ul> <li>&copy; Icon made by Freepik from www.flaticon.com</li> <br/>-->
-						<ul> <li>&copy; Icon made by Freepik from www.flaticon.com</li>  <li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul> <li>&copy; Images from <a href="https://unsplash.com/">Unsplash</a></li> <li>&copy; Icon made by Freepik from <a href="https:// www.flaticon.com"> www.flaticon.com</a></li>  <li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 
