--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					<div id="intro">
 						<h1>My name is <br />
 						William Suzuki</h1>
-						<p> R-Python | Spatial Statistics | Financial Econometrics | Bayesian Inference |<br /> 
-									| Machine Learning | Economic Development 
+						<p> R-Python | GeoAnalysis | Financial Econometrics | Bayesian Inference |<br /> 
+									 Machine Learning | Economic Development 
 									| Ms in Economics USP 
 					<!--	<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -60,7 +60,16 @@
 
 						<!-- Posts -->
 							<section class="posts">
-																<article>
+								<article>
+									<header>
+										<h2><a href="homicide.html">Homicides and<br /> Random Forest
+										</a></h2>
+									</header>
+									<a href="homicide.html" class="image fit"><img src="images/forest1.jpg" alt="" /></a>
+									<p>The objective of this article is to explore and model the dataset of homicides in the state of Santa Catarina. For each month, we use random forest to predict in a hexagon polygon data frame. Check out the maps inside.</p>
+								</article>
+
+								<article>
 									<header>
 										<h2><a href="luminosity_markdown.html">Night Time Luminosity <br/> for cities in Brazil
 										</a></h2>
@@ -82,14 +91,7 @@
 
 								</article>
 								<!--
-								<article>
-									<header>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/forest1.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-								</article>
+								
 								<article>
 									<header>
 										<h2><a href="#">Primis eget<br />
