--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<div id="intro">
 						<h1>My name is <br />
 						William Suzuki</h1>
-						<p> R-Python | GeoAnalysis | Financial Econometrics | Bayesian Inference |<br /> 
+						<p> R-Python | GeoAnalysis | Time Series Econometrics | Bayesian Inference |<br /> 
 									 Machine Learning | Economic Development 
 									| Ms in Economics USP 
 					<!--	<ul class="actions">
@@ -81,6 +81,16 @@
 
 								</article>
 
+								<article>
+									<header>
+										<h2><a href="estate.html"> real estate  <br />
+										and Boosting</a></h2>
+									</header>
+									<a href="estate.html" class="image fit"><img src="images/sao_paulo_1.jpg" alt="" /></a>
+									<p>In this article we apply boosting and other models to predict real estate prices in the metropolitan region of São Paulo. We make maps showing the distribution of prices, and how housing characteristics impact price.</p>
+
+								</article>
+
 
 								<article>
 									<header>
@@ -105,15 +115,6 @@
 								</article>
 								<!--
 								
-								<article>
-									<header>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/sao_paulo_1.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-
-								</article>
 
 
 								<article>
