add article black box

--- a/index.html
+++ b/index.html
@@ -83,14 +83,22 @@
 
 								<article>
 									<header>
-										<h2><a href="estate.html"> real estate  <br />
-										and Boosting</a></h2>
+										<h2><a href="estate.html"> real estate and  <br />
+										gradient Boosting</a></h2>
 									</header>
 									<a href="estate.html" class="image fit"><img src="images/sao_paulo_1.jpg" alt="" /></a>
 									<p>In this article we apply boosting and other models to predict real estate prices in the metropolitan region of São Paulo. We make maps showing the distribution of prices, and how housing characteristics impact price.</p>
 
 								</article>
 
+								<article>
+									<header>
+										<h2><a href="blackbox.html">Black Box model<br />
+																		Explanation</a></h2>
+									</header>
+									<a href="blackbox.html" class="image fit"><img src="images/mystery.jpg" alt="" /></a>
+									<p> In this article we propose a method to summarize the predictions made by random forest and gradient boosting models. We do this for two applications made in previous articles. </p>
+								</article>
 
 								<article>
 									<header>
@@ -111,7 +119,6 @@
 									</header>
 									<a href="report_SPSAS.pdf" class="image fit"><img src="images/conference.jpg" alt="" /></a>
 									<p> São Paulo School of Advanced Sciences hosted the <i> SPSAS Learning from Data </i> on August 2019. This is my report on the presentations. Some of the presenters are Abu-Mostafa, Ulisses Neto, Ling Liu, and Željko Ivezić.</p>
-
 								</article>
 								<!--
 								
