change header index

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>My name is <br />
-						William Suzuki</h1>
+						<h1>William Suzuki<br/><br/> </h1>
+						
+
 						<p> R-Python | GeoAnalysis | Time Series Econometrics | Bayesian Inference |<br /> 
 									 Machine Learning | Economic Development 
 									| Ms in Economics USP 
