add explore random forests

--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
 
 								<article>
 									<header>
+										<h2><a href="explore_RF.html">Exploring<br />
+										Random Forests</a></h2>
+									</header>
+									<a href="explore_RF.html" class="image fit"><img src="images/explore.jpg" alt="" /></a>
+									<p> We simulate some data generating processes. Then we fit random forests in samples from the simulated DGP. We explore a classification model and a regression model.</p>
+
+								</article>
+
+								<article>
+									<header>
 										<h2><a href="luminosity_markdown.html">Night Time Luminosity <br/> for cities in Brazil
 										</a></h2>
 									</header>
