--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 							<li class="active"><a href="index.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
+							<li><a href="CV.pdf" class="CV"><span class="label">CV</span></a></li>
 							<li><a href="https://www.linkedin.com/in/william-suzuki-8b3b56164/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/williamszk" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
