eplore random forests circle

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 
 								<article>
 									<header>
-										<h2><a href="explore_RF.html">Exploring<br />
-										Random Forests</a></h2>
+										<h2><a href="explore_RF_circle.html">Random Forest<br />
+										Exploration I</a></h2>
 									</header>
-									<a href="explore_RF.html" class="image fit"><img src="images/explore.jpg" alt="" /></a>
-									<p> We simulate some data generating processes. Then we fit random forests in samples from the simulated DGP. We explore a classification model and a regression model.</p>
+									<a href="explore_RF_circle.html" class="image fit"><img src="images/explore.jpg" alt="" /></a>
+									<p> We simulate some data generating processes. Then we fit random forests in samples from the simulated DGP. We explore a classification model.</p>
 
 								</article>
 
