--- a/index.html
+++ b/index.html
@@ -114,6 +114,17 @@
 
 								<article>
 									<header>
+										<h2><a href="boots_explore1.html">Bootstrapping <br/> Exploration I
+										</a></h2>
+									</header>
+									<a href="boots_explore1.html" class="image fit"><img src="images/boots_explore1.jpg" alt="" /></a>
+									<p>
+										Here we explore how bootstraps change when we change parameters. Some of the parameters that we change are number of bootstraps samples B, sample size m of each bootstrap sample and dispertion of orginal sample (variance σ2 of DGP).
+									</p>
+								</article>
+
+								<article>
+									<header>
 										<h2><a href="luminosity_markdown.html">Night Time Luminosity <br/> for cities in Brazil
 										</a></h2>
 									</header>
