cep to coords python and google maps

--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
 
 								<article>
 									<header>
+										<h2><a href="report_SPSAS.pdf">CEP to lat-long:<br />
+																		Python and Google Maps</a></h2>
+									</header>
+									<a href="cep_lat_lon.html" class="image fit"><img src="images/mail_boxes.jpg" alt="" /></a>
+									<p> In this Jupyter notebook we build an algorithm that with a list of the 5 first digits of CEPs we find its geographic coordinate. We use python with selenium and beautiful soup.</p>
+								</article>
+
+
+
+
+								<article>
+									<header>
 										<h2><a href="report_SPSAS.pdf">SPSAS learning from<br />
 																		Data Report</a></h2>
 									</header>
