--- a/index.html
+++ b/index.html
@@ -155,6 +155,16 @@
 									<a href="report_SPSAS.pdf" class="image fit"><img src="images/conference.jpg" alt="" /></a>
 									<p> São Paulo School of Advanced Sciences hosted the <i> SPSAS Learning from Data </i> on August 2019. This is my report on the presentations. Some of the presenters are Abu-Mostafa, Ulisses Neto, Ling Liu, and Željko Ivezić.</p>
 								</article>
+
+								<article>
+									<header>
+										<h2><a href="artigo_dissertacao.pdf">Master's in Economics <br/> Thesis</a></h2>
+									</header>
+									<a href="artigo_dissertacao.pdf" class="image fit"><img src="images/research.jpg" alt="" /></a>
+									<p> This is master's thesis, it is about understanding the realtionship between political institutions
+									and economic development in municipalities of Brazil. I use a local spatial method called Geographically Weighted Regressions to explore the heterogeneity of the process.</p>
+								</article>
+
 								<!--
 								
 
