--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 								<article>
 									<header>
-										<h2><a href="report_SPSAS.pdf">CEP to lat-long:<br />
+										<h2><a href="cep_lat_lon.html">CEP to lat-long:<br />
 																		Python and Google Maps</a></h2>
 									</header>
 									<a href="cep_lat_lon.html" class="image fit"><img src="images/mail_boxes.jpg" alt="" /></a>
