--- a/index.html
+++ b/index.html
@@ -217,7 +217,12 @@
 								"All models are wrong, but some are useful" <br/>
 								- George Box
 							</section>
-
+							<section>
+								(Computers + Mathematics) is extremely powerful. "But its abundance of power is matched by its lack of wisdom." <br/>
+								- Richard McElreath
+							</section>
+							
+							
 							<section class="alt">
 								<h3>Address</h3>
 								<p> São Paulo, BR</p>
