add new article, base image dockerfile

--- a/index.html
+++ b/index.html
@@ -38,14 +38,30 @@
 
 				<!-- Main -->
 					<div id="main">
-
 							<section class="posts">
+								<article>
+									<header>
+										<h2><a href="https://keen-howler-bbf.notion.site/Build-a-base-image-for-all-your-Dockerfiles-d2c44df8ea434b4bab3a127e48d11065">
+											Build a base image 	
+											<br /> for all your Dockerfiles
+										</a></h2>
+									</header>
+									<a 
+									href="https://keen-howler-bbf.notion.site/Build-a-base-image-for-all-your-Dockerfiles-d2c44df8ea434b4bab3a127e48d11065" 
+									class="image fit"><img 
+									src="https://keen-howler-bbf.notion.site/images/page-cover/nasa_ibm_type_704.jpg" 
+									alt="" /></a>
+									<p>In my tests, I have to use different Dockerfiles for different 
+										types of tests and most of those Dockerfiles have the same beginning. 
+										Usually installing something using apt-get install ...</p>
+								</article>
+
 								<article>
 									<header>
 										<h2><a href="homicide.html">Homicides and<br /> Random Forest
 										</a></h2>
 									</header>
-									<a href="homicide.html" class="image fit"><img src="images/forest1.jpg" alt="" /></a>
+									<a href="homicide.html" class="image fit"><img src="images/forest1.jpg" alt="A dark forest" /></a>
 									<p>The objective of this article is to explore and model the dataset of homicides in the state of Santa Catarina. For each month, we use random forest to predict in a hexagon polygon data frame. Check out the maps inside.</p>
 								</article>
 
